app/public_html/style.css
/*
FILE NAME: style.css
WRITTEN BY: Kent Are Torvik, Edvard Nordstrøm Ødegaard, Simen Olavesen, Øystein Hølland, Aleksander Kaldestad Christensen
WHEN: November 2017
PURPOSE: Styling for the website
*/

body, html {
	color:rgba(0,0,0,0.87);
	margin: 0px;
	width:100%;
	font-family: 'Roboto', sans-serif;
}

body {
	background: #61aea8;
}
b {
	font-weight:600;
}

h1, h2, h3, h4, h5 {
	font-weight:400;
}

h1 {
	font-size:24px;
	line-height:40px;
}
h2 {
	font-size:18px;
	line-height:40px;
}
h3 {
	font-size:16px;
}

a {
	color: #61AEA8;
	font-weight: 400;
	outline:0;
}

hr {
	color:#ddd;
	opacity: 0.30;
	padding:0px;
	margin:0px;
}
button.flat_button, input.flat_button, submit.flat_button {
	border: none;
}
footer {
	background-color:#61aea8;
}

.full {
	padding-bottom:36px;
	width:100%;
	background-color:#DDD;
}

.page_container {
	width:100%;
	height:100%;
	position:absolute;
	/* Make room for banner on top outside floating while scroll */
	padding-top:56px;
	background-color:#ccc;
}

.page_header {
	background:#92e0d9 url("images/dog.jpg");
	background-attachment: fixed;
	background-position: center;
	background-size: cover;
	position:relative;
	height:30%;
	width:100%;
	padding-bottom:45px;
	/* for clipping over box_header */
	z-index:9;
	position:relative;
}

.page_box {
	/* Clip the page_box over into the page_header with -45px (height of the line-height box_header */
	margin-top:-45px;
	margin-left: 10%;
	margin-right: 10%;
	background:#eeeeee;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	overflow:hidden;
}

.small-images img {
    max-width: 200px;
    margin:auto;
}
.fill-images img {
    max-width: 100%;
    text-align: right;
    margin:auto;
}

.circle-images img {
    max-height: 200px;
    border-radius: 50%;
    margin-top: 30px;
}



.full-width {
	max-width:100% !important;
	max-height:400px;
	margin:auto;
}

.page_box p {
	font-size: 16px;
	font-weight:400;
	line-height:32px;

}
.page_box li {
	padding:16px;
	color:rgba(0,0,0,0.87);
	border-bottom: 1px solid rgba(0, 0, 0, .12);
}

.page_box ol, ul {
	list-style:none;
	padding:0px;
	margin:0px;
}


.box_header {
	background:#FFF;
	padding:8px 24px 8px 24px;
	border-bottom: 1px solid rgba(0, 0, 0, .12);
	z-index:9;
	position:relative;
}

.box_content {
	padding:24px;
	transition: 0.3s all;
}
.content li a{
	padding-left:16px;
	cursor:pointer;
}
.paragraph {
	margin:0px;
	display:block;
	margin-bottom:15px;
	padding:0px;
	padding-right:30px;
	padding-left:30px;
	font-size:16px;
	font-weight:400;
	line-height:25px;
	text-align:left;
}

.header_bar {
	background: #fff;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	z-index: 100;
	width: 100%;
	height: 56px;
	position:fixed;
	overflow: hidden;
}

.header_content {
	float:right;
	height:100%;
	width:70%;
}

.header_content a {
	float: right;
	padding-right: 20px;
	padding-left:20px;
	font-family: "Roboto","Helvetica","Arial",sans-serif;
	color: rgba(66,66,66,0.87);
	line-height: 56px;
	font-weight: 400;
	font-size: 18px;
	letter-spacing: 0.02em;
	text-decoration:none;
}

.header_content a:hover {
	background-color:#61aea8;
	cursor:pointer;
}

.navbar-collapse {
	position:fixed;
	background-color:#fff;
	overflow-x:hidden;
	z-index:3;
	top:56px;
	right:0;
	overflow:hidden;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.navbar-collapse a{
	padding: 20px 42px 20px 24px;
	display:block;
	border-bottom: 1px solid rgba(0,0,0,.12);
}
.navbar-collapse a:hover{
	background-color:#ddd;
}

/* For navbar hamburger ikon */
.icon-open {
	transform: rotate(-90deg);
}


.header_logo {
	padding-left: 20px;
	width:20%;
	height:100%;
	position:absolute;
}

.header_logo img {
	height:100%;
	min-width:40%;
}

.product_table {
	border-radius: 2px;
	width: 100%;
	background:#fafafa;
	border: 1px solid #ddd;
	font-weight: 400;
}
.product_table tr:last-child th, .product_table tr:last-child td{
	border-bottom:none;
}
.product_table label {
	font-weight:400;
	color:rgba(0,0,0,0.87);
}

.product_table tr td input, .product_table tr td textarea {
	box-sizing: border-box;
	width:100%;
}

.product_table th {
	padding-left: 10px;
	padding-right: 10px;
	background-color:#fff;
	border-bottom: 1px solid rgba(0,0,0, .12);
}

.product_table td {
	padding: 20px;
	border-bottom: 1px solid rgba(0,0,0, .12);
}

.th-left-border {
	width:20%;
	border-right:1px solid #ddd !important;
}

.noselect {
	-webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none; /* Safari */
	-khtml-user-select: none; /* Konqueror HTML */
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* Internet Explorer/Edge */
	user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
}
.navbar-collapse {
	display: none;
}

/* For small devices */
@media screen and (max-width: 920px) {
	.header-media {
		display:none !important;
	}
	.paragraph {
		text-align:center !important;
	}
	.left-border {
		border:0px none !important;
		padding:0px !important;
	}
	.nav-dropdown {
		display:none !important;
	}
	.product_table th, .product_table td {
		padding:0px;
		display: block;
		transition: 0.5s all;
		width:100%;
		text-align:center;
	}
	.product_table input, .product_table textarea {
		width:80% !important;
		margin-top:5px;
		margin-bottom:5px;
	}
	.compact tr:not(:first-child):not(:last-child) th {
		display:none !important;
	}

	/* Hide all but hamburger icon */
	.header_content a:not(:first-child) {
		display: none;
	}
	.header_content a.icon {
		float:right;
		padding-right: 20px;
		padding-left: 20px;
		display: inline-block !important;
	}
	.navbar-collapse {
		display: block;
	}

}

.footer_content {
	margin-left: 10%;
	margin-right: 10%;
	padding-bottom:20px;
}

.footer_content.row {
	width:initial;
}
.footer_content h3{
	color: #fff;
	font-weight:400;
	line-height:32px;
}
.footer_content a{
	color:rgba(66,66,66,1);
	width:100%;
	height:56px;
}
.footer_content li {
	margin-bottom:10px;
}

/* Google maps widget front page */
#map {
	height:400px;
	width:100%;
}

.no-box-padding {
	/* This change is only to hide unchangeable google maps background-color. We push it outside the container and hide it with overflow:hidden in page_box. */
	width:unset !important;
	margin-left:-25px;
	margin-right:-27px;
}


.footer_copyright {
	background-color:#2f7e79;
	width:100%;
}
.footer_copyright_text {
	margin-bottom:0px;
	margin-left: 10%;
	margin-right: 10%;
	background:#2f7e79;
	color:#fff;
}

.flat_button {
	background-color: #fff;
	border-radius:3px;
	text-transform: uppercase;
	box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
	color: #61AEA8;
	outline:0;
	padding:20px 60px 20px 60px;
	text-decoration: underline;
	cursor: pointer;
}
.flat_button.small {
	width:200px;
	padding:10px 30px 10px 30px;
}
.flat_button:hover {
	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}
.flat_button:focus {
	background-color: #eee;
	box-shadow: 0 1px 2px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}


/* Compact tables, showing only first th */
.compact p{
	padding: 0;
	margin: 0;
}


/* Removes number spinner from number input fields */
input[type=number]::-webkit-outer-spin-button,
input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Makes number fields look like text-fields i mozilla */
input[type=number] {
    -moz-appearance:textfield;
}
/* End styling for forms */


.header_content a.icon {
	display: none;
	cursor:pointer;
	transition: color 0.3s ease, background-color 0.3s ease, transform 0.4s ease;
}
.nav-icon {
	padding-top:15px;
	padding-bottom:15px;
	height:26px;
}

.navbar-hide {
	display:none;
}

.row {
	width:100%;
}

.col {
    display: inline-block;
}

.three .col{
	vertical-align:top;
	width:32%;
}
.two .col {
	vertical-align:top;
	width:49%;
}

@media screen and (max-width: 920px) {
	.three .col{
		width:100%;
		min-width:100%;
	}
	.two .col {
		width:100%;
		min-width:100%;
	}
	.left-border {
		border-left:0px;
	}
}

.center {
	text-align:center;
}

.no-padding {
	padding:0px;
}
.no-padding-right {
	padding-left:0px;
}
.margin-top36{
    margin-top: 30px;


}

.knowledge-menu {
	vertical-align:top;
	width:29%;
	border-right: 1px solid rgba(0, 0, 0, .12);
	height:100%;

}
.knowledge-content {
	vertical-align:top;
	width:69%;
}

.header-media {
	background-color:#FFF;
	text-align:center;
	margin-left:50%;
	width:40%;
	height:50px;
	display:inline-block;
	position:relative;
	top:40%;
}

.header-media p {
	display:inline-block !important;
}

.social-buttons {
    width:50px;
    height:50px;
    float:right;
}

/*  Stepper  */
.step {
	display:inline-block;
	float:left;
	padding-right:24px;
	transition: 0.5s all;
}
.step-content {
	width:89%;
	display:inline-block;
	transition: 0.5s all;
}
.step-content h2 {
	line-height:80px;
	margin:10px;
}
.step-col {
	width:100%;
}
/* stepper_cart */

#content-2, #content-3 {
	opacity: 0.2;
}


/* For the stepper overview */
.active_step {
	display: inline-block;
	border-radius: 50%;
	width:80px;
	height:80px;
	background: #2196F3;
	color: #FFF;
	text-align: center;
	line-height: 80px;

	font-size: 32px;
	margin: 10px auto;
	transition: 0.5s all;
}

.inactive_step {
	display: inline-block;
	border-radius: 50%;
	width:80px;
	height:80px;

	background: #000000;
	opacity: 0.38;
	color: #FFF;
	text-align: center;
	line-height: 80px;

	font-size: 32px;
	margin: 10px auto;
	transition: 0.5s all;
}

.step_connector {
	border-left: 2px solid #BDBDBD;
	margin-left: 50%;
}

@media screen and (max-width:740px) {
	.step {
		display:inline-block;
		float:left;
		padding-right:10px;
		transition: 0.5s all;
	}

	.active_step {
		width:40px;
		height:40px;
		line-height: 40px;
		font-size: 16px;
	}

	.inactive_step {
		width:40px;
		height:40px;
		line-height: 40px;
		font-size: 16px;
	}
}

.step {
	display:inline-block;
	padding-right:10px;
	transition: 0.5s all;
}
.step-content {
	width:70%;
	display:inline-block;
	transition: 0.5s all;
}
/* End stepper styling */

.footer_icon {
	width: 30px;
}
.spacer {
	margin-top:50px;
	margin-bottom:50px;
}

.col-image {
	width:72px;
	height:72px;
	margin-bottom:15px;
	margin-top:15px;
}

.left-border {
	border-left: 3px solid #61AEA8;
	padding-left:10px;
	padding-bottom:-20px;
}

.white-box {
	background-color: #FFF;
	margin-left:20%;
	margin-right:20%;
	padding-top:20px;
	padding-bottom:20px;
	border-radius:5px;
}

.nav-dropdown:hover .navbar-resources {
	display:block;
	position:fixed;
	background-color:#fff;
	z-index:3;
	top:56px;
	right:0;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}
.nav-dropdown:hover .cart-items {
	max-height:100%;
	overflow-y:scroll;
}

.nav-dropdown:hover .navbar-resources a{
	border-bottom: 1px solid rgba(0,0,0,.12);
	float:none;
	letter-spacing:none;
	text-decoration: underline;
	font-size:18px !important;
	display:block;
	color: #61AEA8;
	font-weight: 400;
	outline:0;
}
.nav-dropdown:hover .navbar-resources li{
	border-bottom: 1px solid rgba(0,0,0,.12);
	float:none;
	letter-spacing:none;
	text-decoration: underline;
	font-size:18px !important;
	display:block;
	color: #61AEA8;
	font-weight: 400;
	outline:0;
}

.nav-dropdown:hover .navbar-resources a:hover{
	background-color:#ddd !important;
}
.navbar-resources {
	display:none;
}
.cart-items li {
	display:inline-block !important;
	width:100%;
	height:100%;
}
.cart-items img {
	width:120px;
	max-height:100%;
	float:left;
    padding-right: 10px;
}
.cart-items a {
	width:79%;
}

.nav-dropdown:hover #cart-icon {
	background-color:#ddd !important;

}
.nav-dropdown:hover .cart-items a:hover{
	margin:auto;
	background-color:#fff !important;
}

